--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:gravity="center_vertical"
         android:visibility="gone"
         android:layout_margin="10dp">
         <TextView
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
+            android:layout_weight="1"
             >
             <Button
                 android:id="@+id/button_summer"
@@ -64,6 +66,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
+            android:layout_weight="1"
             >
 
             <Button
@@ -109,6 +112,7 @@
                 android:orientation="vertical"
                 android:background="@mipmap/seekbar"
                 android:layout_marginTop="5dp"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
                 >
             <SeekBar
@@ -158,6 +162,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="5dp"
+            android:background="@mipmap/misc"
+            android:layout_weight="1"
             android:gravity="center_horizontal">
 
             <TextView
